page d'accueil avec classement des pays

--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,8 @@
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
     "@angular/forms": "^18.0.0",
+    "primeng": "^17.18.1",
+    "primeflex": "^3.3.1",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
