--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,38 @@
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# indispensable pour que les jobs de construction jenkins puisse garder son cache
+.cache/
 
-# IntelliJ IDEA specific
+# from: https://github.com/github/gitignore/blob/master/Maven.gitignore
+target/
+
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+###
+
+# from: https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff
 .idea/
-*.iml
-*.iws
 
-# Mac OS specific
-.DS_Store
+# Gradle and Maven with auto-import
+*.iml
+
+
+tmp.*
+*.tmp
+*.log
+
+**/.DS_Store
+
+mic-rocksdb/
