--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "@angular/forms": "^18.0.0",
     "primeng": "^17.18.1",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
